# qssnotify

./: Cargo.toml  LICENSE  README.md
src/: core.rs  main.rs
src/actions/: add.rs  delete.rs  edit.rs  get.rs  list.rs  mod.rs  utils.rs
src/cli_displayer/: mod.rs
src/data_objects/: mod.rs  sentence.rs
src/errors/: initialization_error.rs  mod.rs
src/filesystem/: constants.rs  filesystem_initializer.rs  mod.rs  paths.rs  read.rs  storage.rs  write.rs
src/os_notifier/: mod.rs
src/settings/: mod.rs
src/traits/: displayer.rs  initializer.rs  mod.rs  notifier.rs  storage.rs  storage_interface.rs
