[package]
name = "qssnotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.163", features = ["derive"]}
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.68"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
home = "0.5.5"
