[package]
name = "qssnotify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.163", features = ["derive"]}
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.68"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
home = "0.5.5"
clap = { version = "4.3.2", features = ["derive"]}
ron = "0.8.0"
tempfile = "3.6.0"
colorful = "0.2.2"
nix = "0.26.2"
rand = "0.8.5"
notify-rust = "4.8.0"
chrono = "0.4.26"
serde_with = { version = "3.0.0", features = ["chrono_0_4"]}
