[package]
name = "qssnotify"
version = "1.0.0"
rust-version = "1.70.0"
edition = "2021"
description = "An utility that allows to regularly display notifications in the Desktop environment. Useful to help you remember that you should take care of yourself and cuddle your cat (among other things)"
authors = ["Maxime Mikotajewski <maximemikotajewski@gmail.com>"]
categories = ["command-line-utilities", "desktop-environment", "notifications", "quality-of-life"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/Quessou/qssnotify"

[[bin]]
name = "qssnotify"

[dependencies]
serde = {version = "1.0.163", features = ["derive"]}
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.68"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
home = "0.5.5"
clap = { version = "4.3.2", features = ["derive"]}
ron = "0.8.0"
tempfile = "3.6.0"
colorful = "0.2.2"
nix = "0.26.2"
rand = "0.8.5"
notify-rust = "4.8.0"
chrono = "0.4.26"
serde_with = { version = "3.0.0", features = ["chrono_0_4"]}


[package.metadata.deb]
license-file = [ "LICENCE" ]
depends = "$auto"
extended-description = """
QSSNotify is an utility that allows to display regularly notifications in the desktop environment.
This can be used to send yourself messages telling you to take care of yourself, take breaks, hydrate yourself, go outside and go breathe some fresh air instead of struggling with what you're doing right now.
Because you deserve breaks and to get some rest.
"""
section = "utils"
priority = "optional"
assets = [
    [ "target/release/qssnotify", "/usr/bin/qssnotify", "0755" ],
]
